Minor navbar fixes and overall alignement changes

--- a/angular/angular-app/src/app/utilities/footer/footer.component.less
+++ b/angular/angular-app/src/app/utilities/footer/footer.component.less
@@ -11,3 +11,7 @@
     // position: absolute;
     bottom: 0%;
 }
+
+.address {
+    margin: bottom 1rem;
+}
