--- a/angular/angular-app/src/app/utilities/navbar/navbar.component.less
+++ b/angular/angular-app/src/app/utilities/navbar/navbar.component.less
@@ -25,6 +25,10 @@ img {
     box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .5);
 }
 
+.home {
+    float: right !important;
+}
+
 .home:hover {
     color: #00b9cc !important;
 }
@@ -41,7 +45,7 @@ img {
 
 .btn-group {
     // margin-bottom: 4%;
-    margin-left: 60%;
+    // margin-left: 60%;
     justify-content: end;
 }
 
@@ -52,12 +56,16 @@ img {
 // .nav-item1:hover .nav-item2 {
 //     // background-color: beige;
 // }
+.row {
+    width: 100%;
+}
 
 .btn,
 .btn-primary {
     padding: 15px;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-top: 1.8%;
+    // margin-right: 5px;
+    // margin-left: 5px;
 }
 
 .nav-custom {
