--- a/angular/angular-app/src/styles.less
+++ b/angular/angular-app/src/styles.less
@@ -3,11 +3,21 @@
 //     background-image: url('./assets/bg-image-network.png');
 //     background-size: 100% 100%;
 //     // filter: blur(8px);
+.main {
+    min-width: 100% !important;
+}
 
 // }
 // html {
 //     background-color: #f2f2f2;
 // }
+.container {
+    min-width: 1050px !important;
+}
+
+.container-fluid {
+    width: 100% !important;
+}
 
 body {
     // background-color: #f2f2f2;
